--- a/Tde1.cbp
+++ b/Tde1.cbp
@@ -13,15 +13,15 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
-					<Add directory="/usr/include/SDL2" />
+					<Add option="-std=c++17" />
+					<Add directory="C:/SDL2/include" />
 					<Add directory="include" />
 				</Compiler>
 				<Linker>
-					<Add option="-lSDL2" />
-					<Add option="-lSDL2main" />
-					<Add option="-lSDL2_image" />
-					<Add option="-lSDL2_ttf" />
-					<Add option="-lSDL2_mixer" />
+					<Add library="mingw32" />
+					<Add library="SDL2main" />
+					<Add library="SDL2" />
+					<Add directory="C:/SDL2/include" />
 				</Linker>
 			</Target>
 			<Target title="Release">
@@ -42,19 +42,27 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="main.cpp" />
 		<Unit filename="include/App.h" />
-		<Unit filename="src/App.cpp" />
-		<Unit filename="include/Shape.h" />
-		<Unit filename="include/Color.h" />
-		<Unit filename="include/Rectangle.h" />
-		<Unit filename="include/CircleFilled.h" />
-		<Unit filename="include/Casa.h" />
 		<Unit filename="include/Arvore.h" />
+		<Unit filename="include/Casa.h" />
 		<Unit filename="include/Cerca.h" />
+		<Unit filename="include/CircleFilled.h" />
+		<Unit filename="include/Color.h" />
+		<Unit filename="include/RectRotated.h" />
+		<Unit filename="include/Rectangle.h" />
+		<Unit filename="include/Shape.h" />
 		<Unit filename="include/Sol.h" />
+		<Unit filename="include/TransformUtils.h" />
 		<Unit filename="include/Transformations.h" />
+		<Unit filename="main.cpp" />
+		<Unit filename="src/App.cpp" />
+		<Unit filename="src/Arvore.cpp" />
+		<Unit filename="src/Casa.cpp" />
+		<Unit filename="src/Cerca.cpp" />
+		<Unit filename="src/CircleFilled.cpp" />
+		<Unit filename="src/RectRotated.cpp" />
+		<Unit filename="src/Sol.cpp" />
+		<Unit filename="src/TransformUtils.cpp" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
-
